--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -1,90 +1,98 @@
 <div class="w-screen h-screen p-4">
-    <div class="flex items-center mb-6 relative">
-        <!-- Centre buttons container -->
-        <div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
-            <a id="stats-btn" href="/profile/statistics" data-link 
-                class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                Statistics
-            </a>
-            <a id="edit-btn" href="/profile/edit" data-link 
-                class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/30 transition shadow-[0_0_10px_#00FFFF]">
-                Edit profile
-            </a>
-        </div>
-        <!-- Home button -->
-        <div class="ml-auto">
-            <a href="/home" data-link 
-                class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-                <span class="text-[#00FFFF] font-bold text-lg">HOME</span>
-            </a>
-        </div>
-    </div>
+	<div class="flex items-center mb-6 relative">
+		<!-- Centre buttons container -->
+		<div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
+			<a id="stats-btn" href="/profile/statistics" data-link 
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				Statistics
+			</a>
+			<a id="edit-btn" href="/profile/edit" data-link 
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/30 transition shadow-[0_0_10px_#00FFFF]">
+				Edit profile
+			</a>
+		</div>
+		<!-- Home button -->
+		<div class="ml-auto">
+			<a href="/home" data-link 
+				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+			</a>
+		</div>
+	</div>
 
-    <form id="edit-password-form" 
-        class="p-6 rounded-3xl border-4 border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] h-[calc(100%-100px)] overflow-auto">
-        <div class="flex flex-col md:flex-row gap-6 h-full">
-            <!-- Left part (image) -->
-            <div class="flex flex-col items-center mt-10 md:w-1/3">
-                <div class="size-80 rounded-full mb-4 border-4 border-[#00FFFF] bg-black/30 shadow-[0_0_10px_#00FFFF] overflow-hidden"></div>
-            </div>
+	<form id="edit-password-form" 
+		class="p-6 rounded-3xl border-4 border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] h-[calc(100%-100px)] overflow-auto">
+		<div class="flex flex-col md:flex-row gap-6 h-full">
+			<!-- Left part (image) -->
+			<div class="flex flex-col items-center mt-10 md:w-1/3">
+				<div class="size-80 rounded-full mb-4 border-4 border-[#00FFFF] bg-black/30 shadow-[0_0_10px_#00FFFF] overflow-hidden"></div>
+				
+				<div class="text-center mb-3">
+    				<span class="text-[#FFD700] text-2xl font-bold">@player42</span>
+    			</div>
+				
+    			<div class="text-center">
+    			    <span class="text-[#00FFFF] text-lg">player42@example.com</span>
+    			</div>
+			</div>
 
-            <!-- Right part (form) -->
-            <div class="md:w-2/3 mt-20 space-y-5">
-                <div id="edit-current-password-div" class="flex flex-col">
-                    <label class="block text-sm font-bold mb-1 text-[#00FFFF]">current password</label>
-                    <div class="relative w-full md:w-2/3">
-                        <input id="edit-currentpassword-input" required type="password" placeholder="********" 
-                            class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#B026FF] transition"/>
-                        <button type="button" id="edit-currentpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-                            <img id="edit-currentpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
-                        </button>
-                    </div>
-                </div>
+			<!-- Right part (form) -->
+			<div class="md:w-2/3 mt-20 space-y-5">
+				<div id="edit-current-password-div" class="flex flex-col">
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">current password</label>
+					<div class="relative w-full md:w-2/3">
+						<input id="edit-currentpassword-input" required type="password" placeholder="********" 
+							class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
+						<button type="button" id="edit-currentpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
+							<img id="edit-currentpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
+						</button>
+					</div>
+				</div>
 
-                <div id="edit-new-password-div" class="flex flex-col">
-                    <label class="block text-sm font-bold mb-1 text-[#00FFFF]">new password</label>
-                    <div class="flex items-center md:w-2/3">
-                        <div class="relative w-full">
-                            <input id="edit-newpassword-input" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
-                                placeholder="********" 
-                                class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#B026FF] transition"/>
-                            <button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-                                <img id="edit-newpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
-                            </button>
-                        </div>
-                        <img id="profile-badPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-                        <img id="profile-goodPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-                    </div>
-                    <span id="edit-password-error" class="text-red-500 text-sm hidden">Password must be at least 6 characters long and include uppercase, lowercase and numbers</span>
-                </div>
+				<div id="edit-new-password-div" class="flex flex-col">
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">new password</label>
+					<div class="flex items-center md:w-2/3">
+						<div class="relative w-full">
+							<input id="edit-newpassword-input" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
+								placeholder="********" 
+								class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
+							<button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
+								<img id="edit-newpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
+							</button>
+						</div>
+						<img id="profile-badPasswordIcon" src="/images/bad.png" class="hidden ml-2 w-6 h-6 shrink-0" />
+						<img id="profile-goodPasswordIcon" src="/images/good.png" class="hidden ml-2 w-6 h-6 shrink-0" />
+					</div>
+					<span id="edit-password-error" class="text-red-500 text-sm hidden">Password must be at least 6 characters long and include uppercase, lowercase and numbers</span>
+				</div>
 
-                <div id="edit-confirm-new-password-div" class="flex flex-col">
-                    <label class="block text-sm font-bold mb-1 text-[#00FFFF]">confirm password</label>
-                    <div class="flex items-center md:w-2/3">
-                        <div class="relative w-full">
-                            <input id="edit-confirmpassword-input" required type="password" placeholder="********"
-                                class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#B026FF] transition"/>
-                            <button type="button" id="edit-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
-                                <img id="edit-confirmpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
-                            </button>
-                        </div>
-                        <img id="profile-badConfirmPasswordIcon" src="/images/bad.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-                        <img id="profile-goodConfirmPasswordIcon" src="/images/good.svg" class="hidden ml-2 w-6 h-6 shrink-0" />
-                    </div>
-                </div>
+				<div id="edit-confirm-new-password-div" class="flex flex-col">
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">confirm password</label>
+					<div class="flex items-center md:w-2/3">
+						<div class="relative w-full">
+							<input id="edit-confirmpassword-input" required type="password" placeholder="********"
+								class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
+							<button type="button" id="edit-confirmpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
+								<img id="edit-confirmpassword-icon" src="/images/closerobot.png" class="size-12 drop-shadow-[0_0_10px_#FF007A]" />
+							</button>
+						</div>
+						<img id="profile-badConfirmPasswordIcon" src="/images/bad.png" class="hidden ml-2 w-6 h-6 shrink-0" />
+						<img id="profile-goodConfirmPasswordIcon" src="/images/good.png" class="hidden ml-2 w-6 h-6 shrink-0" />
+					</div>
+				</div>
 
-                <!-- Buttons -->
-                <div class="flex justify-start gap-6 pt-8">
-                    <a href="/profile/edit" type="button" id="unsave-btn-edit-password" 
-                        class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]">
-                        Unsave
-                    </a>
-                    <button type="submit" id="save-btn-edit-password" 
-                        class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]">
-                        Save
-                    </button>
-                </div>
-            </div>
-        </div>
-    </form>
+				<!-- Buttons -->
+				<div class="flex justify-start gap-6 pt-8">
+					<a href="/profile/edit" type="button" id="unsave-btn-edit-password" 
+						class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]">
+						Unsave
+					</a>
+					<button type="submit" id="save-btn-edit-password" 
+						class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]">
+						Save
+					</button>
+				</div>
+			</div>
+		</div>
+	</form>
 </div>
