--- a/frontend/src/pages/tournament_statistics.html
+++ b/frontend/src/pages/tournament_statistics.html
@@ -1,47 +1,47 @@
 <div class="w-screen h-screen p-4">
-    <div class="flex items-center mb-6 relative">
-        <!-- Centre buttons container -->
-        <div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
-            <a id="stats-btn" href="/profile/statistics" data-link 
-                class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                Statistics
-            </a>
-            <a id="edit-btn" href="/profile/edit" data-link 
-                class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                Edit profile
-            </a>
-        </div>
-        <!-- Home button -->
-        <div class="ml-auto">
-            <a href="/home" data-link 
-                class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-                <span class="text-[#00FFFF] font-bold text-lg">HOME</span>
-            </a>
-        </div>
-    </div>
+	<div class="flex items-center mb-6 relative">
+		<!-- Centre buttons container -->
+		<div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
+			<a id="stats-btn" href="/profile/statistics" data-link 
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				Statistics
+			</a>
+			<a id="edit-btn" href="/profile/edit" data-link 
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				Edit profile
+			</a>
+		</div>
+		<!-- Home button -->
+		<div class="ml-auto">
+			<a href="/home" data-link 
+				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+			</a>
+		</div>
+	</div>
 
-    <div id="stats-div" 
-        class="border-4 border-[#00FFFF] rounded-3xl p-4 h-[calc(100vh-125px)] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
+	<div id="stats-div" 
+		class="border-4 border-[#00FFFF] rounded-3xl p-4 h-[calc(100vh-125px)] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF] overflow-hidden flex flex-col relative">
 
-        <div class="flex justify-center gap-4 mb-4 relative z-10">
-            <a id="History-btn" href="/profile/statistics/history" data-link 
-                class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                History
-            </a>
-            <a id="Global-btn" href="/profile/statistics" data-link 
-                class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                Overall
-            </a>
-            <a id="Tournament-btn" href="/profile/statistics/tournaments" data-link 
-                class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#00FFFF] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
-                Tournament
-            </a>
-        </div>
+		<div class="flex justify-center gap-4 mb-4 relative z-10">
+			<a id="History-btn" href="/profile/statistics/history" data-link 
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				History
+			</a>
+			<a id="Global-btn" href="/profile/statistics" data-link 
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				Overall
+			</a>
+			<a id="Tournament-btn" href="/profile/statistics/tournaments" data-link 
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				Tournament
+			</a>
+		</div>
 
-        <div class="flex-1 relative flex items-center justify-center">
-            <div id="Tournament-Div" 
-                class="w-11/12 h-[75vh] space-y-6 bg-black/30 backdrop-blur-lg p-6 rounded-2xl border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">
-            </div>
-        </div>
-    </div>
+		<div class="flex-1 relative flex items-center justify-center">
+			<div id="Tournament-Div" 
+				class="w-11/12 h-[75vh] space-y-6 bg-black/30 backdrop-blur-lg p-6 rounded-2xl border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">
+			</div>
+		</div>
+	</div>
 </div>
