--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -25,7 +25,7 @@
 		<div class="flex flex-col md:flex-row gap-6 h-full">
 			<!-- Left part (image) -->
 			<div class="flex flex-col items-center mt-10 md:w-1/3">
-				<div class="size-80 rounded-full mb-4 border-4 border-[#00FFFF] bg-black/30 shadow-[0_0_10px_#00FFFF] overflow-hidden"></div>
+				<div id="profile-pic-pass" class="size-80 rounded-full mb-4 border-4 border-[#00FFFF] bg-black/30 shadow-[0_0_10px_#00FFFF] overflow-hidden"></div>
 				
 				<div class="text-center mb-3">
     				<span class="text-[#FFD700] text-2xl font-bold">@player42</span>
