--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -1,7 +1,6 @@
 <div class="w-1/4 min-w-[200px] rounded-2xl m-5 p-4 flex flex-col items-center border-4 border-[#B026FF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#B026FF]">
 	<div class="flex flex-col items-center gap-9 w-full">
-		<div class="size-80 rounded-full p-4 border-2 border-[#B026FF] bg-black/20 shadow-[0_0_10px_#B026FF]">
-			<img id="profile-pic" src="/images/pdp_cle-berr.png" alt="Profile Picture" class="w-full h-full object-cover rounded-full">
+		<div id="profile-pic-search" class="size-80 rounded-full p-4 border-2 border-[#B026FF] bg-black/20 shadow-[0_0_10px_#B026FF]">
 		</div>
 		<h2 id="username-h2" class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]"></h2>
 		<button id="friend-btn" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">Add Friend</button>
@@ -21,7 +20,6 @@
 			<!-- Bouton Profile avec tooltip -->
 			<div class="relative group">
 				<a href="/profile/statistics" data-link id="profileBtn"class="w-14 h-14  bg-black/20 rounded-full flex items-center justify-center border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF] overflow-hidden">
-					<span class="text-black font-bold text-xl">P</span>
 				</a>
 			</div>
 		</div>
