--- a/frontend/src/pages/overall_statistics.html
+++ b/frontend/src/pages/overall_statistics.html
@@ -47,7 +47,7 @@
 				<div class="flex w-full space-x-24 items-start">
 					<!-- Parties jouées -->
 					<div class="flex flex-col items-center justify-center mx-10 bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold">GAME PLAYED</div>
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold">GAMES PLAYED</div>
 						<div id="game_played" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 			
@@ -63,18 +63,18 @@
 						<div class="flex flex-col space-y-4">
 							<div class="flex items-center space-x-2">
 								<div class="w-4 h-4 bg-[#00FF00] rounded-sm shadow-[0_0_10px_#00FF00]"></div>
-								<span class="text-[#00FF00] text-2xl">Wins</span>
+								<span class="text-[#00FF00] text-2xl">Game Won</span>
 							</div>
 							<div class="flex items-center space-x-2">
 								<div class="w-4 h-4 bg-[#FF007A] rounded-sm shadow-[0_0_10px_#FF007A]"></div>
-								<span class="text-[#FF007A] text-2xl">Loses</span>
+								<span class="text-[#FF007A] text-2xl">Game Lost</span>
 							</div>
 						</div>
 						<canvas id="graph-win-lose" class="w-48 h-48 rounded-full"></canvas>
 					</div>              
 				</div>
 				<div class="w-full h-[300px] bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] p-4 mt-6">
-					<div class="w-1/2 h-full">
+					<div class="w-2/3 h-full">
 						<canvas id="graph-history-trend" class="w-full h-full"></canvas>
 					</div>
 				</div>
