--- a/frontend/src/pages/tournament_statistics.html
+++ b/frontend/src/pages/tournament_statistics.html
@@ -39,8 +39,38 @@
 		</div>
 
 		<div class="flex-1 relative flex items-center justify-center">
-			<div id="Tournament-Div" 
-				class="w-11/12 h-[75vh] space-y-6 bg-black/30 backdrop-blur-lg p-6 rounded-2xl border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">
+			<div id="Tournament-Div" class="w-11/12 h-[75vh] space-y-6 bg-black/30 backdrop-blur-lg p-6 rounded-2xl border-4 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">							
+				<!-- Statistiques principales -->
+				<div class="flex w-full space-x-24 items-start">
+					<div class="flex flex-col items-center justify-center mx-10 bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold">TOURNAMENTS PLAYED</div>
+						<div id="tournaments_played" class="text-5xl text-[#FFD700] text-center font-bold"></div>
+					</div>
+			
+					<div class="flex flex-col items-center justify-center bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold">BEST RANKING</div>
+						<div id="best_ranking" class="text-5xl text-[#FFD700] text-center font-bold"></div>
+					</div>
+			
+					<div class="flex items-center justify-center w-2/4 h-80 rounded-2xl bg-black/30 border-2 border-[#00FFFF] space-x-5 shadow-[0_0_10px_#00FFFF]">
+						<div class="flex flex-col space-y-4">
+							<div class="flex items-center space-x-2">
+								<div class="w-4 h-4 bg-[#00FF00] rounded-sm shadow-[0_0_10px_#00FF00]"></div>
+								<span class="text-[#00FF00] text-2xl">Tournament Won</span>
+							</div>
+							<div class="flex items-center space-x-2">
+								<div class="w-4 h-4 bg-[#FF007A] rounded-sm shadow-[0_0_10px_#FF007A]"></div>
+								<span class="text-[#FF007A] text-2xl">Tournament Lost</span>
+							</div>
+						</div>
+						<canvas id="graph-win-lose" class="w-48 h-48 rounded-full"></canvas>
+					</div>              
+				</div>
+				<div class="w-full h-[300px] bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] p-4 mt-6">
+					<div class="w-2/3 h-full">
+						<canvas id="graph-history-trend" class="w-full h-full"></canvas>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
