--- a/frontend/src/pages/aigame.html
+++ b/frontend/src/pages/aigame.html
@@ -2,7 +2,7 @@
 	<!-- Joueur 1 -->
 	<div class="mr-12 flex flex-col items-center">
 		<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
-		<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-4 bg-black border-blue-300 shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
+		<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-4 bg-black border-[#00FFFF] shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
 	</div>
 
 	<!-- Zone centrale -->
