les information sont sesormais affiche dans le profil

--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -32,12 +32,10 @@
 					<input type="file" id="pictureInput" accept="image/*" class="absolute inset-0 w-full h-full opacity-0 cursor-pointer"/>
 				</div>
 			
-				<div class="text-center mb-3">
-					<span class="text-[#FFD700] text-2xl font-bold">@player42</span>
+				<div id="username" class="text-center mb-3">
 				</div>
 			
-				<div class="text-center mb-4">
-					<span class="text-[#00FFFF] text-lg">player42@example.com</span>
+				<div id="mail" class="text-center mb-4">
 				</div>
 			
 				<button type="button" id="button-edit-profile" 
