--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -27,12 +27,10 @@
 			<div class="flex flex-col items-center mt-10 md:w-1/3">
 				<div id="profile-pic-pass" class="size-80 rounded-full mb-4 border-4 border-[#00FFFF] bg-black/30 shadow-[0_0_10px_#00FFFF] overflow-hidden"></div>
 				
-				<div class="text-center mb-3">
-    				<span class="text-[#FFD700] text-2xl font-bold">@player42</span>
+				<div id="username-pass"class="text-center mb-3">
     			</div>
 				
-    			<div class="text-center">
-    			    <span class="text-[#00FFFF] text-lg">player42@example.com</span>
+    			<div id="mail-pass"class="text-center">
     			</div>
 			</div>
 
