--- a/frontend/src/pages/multigame.html
+++ b/frontend/src/pages/multigame.html
@@ -1,7 +1,7 @@
 <div class="flex justify-center items-center">
 	<!-- Joueur 1 -->
 	<div class="mr-12 flex flex-col items-center">
-		<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
+		<h1 id="name-player1" class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
 		<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-4 bg-black border-[#00FFFF] shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
 	</div>
 
@@ -17,7 +17,7 @@
 
 	<!-- Joueur 2 -->
 	<div class="ml-12 flex flex-col items-center">
-		<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
+		<h1 id="name-player2" class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
 		<canvas id="statPlayer2" width="250" height="600" class="mt-2 border-4 bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></canvas>
 	</div>
 </div>
