--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -3,8 +3,8 @@
 		<div id="profile-pic-search" class="size-80 rounded-full p-4 border-2 border-[#B026FF] bg-black/20 shadow-[0_0_10px_#B026FF]">
 		</div>
 		<h2 id="username-h2" class="text-center text-2xl text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]"></h2>
-		<button id="friend-btn" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">Add Friend</button>
-		<button id="block-btn" class="bg-transparent border-2 border-[#FF2E9F] px-10 py-3 rounded-xl text-[#FF2E9F] font-bold hover:bg-[#FF2E9F]/20 transition duration-200 shadow-[0_0_10px_#FF2E9F]">Block Player</button>
+		<button id="friend-btn" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]" data-i18n="add_friend_trad">Add Friend</button>
+		<button id="block-btn" class="bg-transparent border-2 border-[#FF2E9F] px-10 py-3 rounded-xl text-[#FF2E9F] font-bold hover:bg-[#FF2E9F]/20 transition duration-200 shadow-[0_0_10px_#FF2E9F]" data-i18n="block_friend_trad">Block Player</button>
 	</div>
 </div>
 
@@ -15,7 +15,7 @@
 		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
 			<a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+				<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
 			</a>
 			<!-- Bouton Profile avec tooltip -->
 			<div class="relative group">
@@ -27,8 +27,8 @@
 
 	<div class="h-full rounded-2xl m-3 p-2 flex flex-col border-4 border-[#00FFFF] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#00FFFF]">
 		<div class="flex justify-center gap-4 mt-2 mb-6">
-			<a data-link id="global-btn-search" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]">Overall</a>
-			<a data-link id="history-btn-search" class="bg-transparent border-2 border-[#00FFFF] px-10 py-3 rounded-xl text-[#00FFFF] font-bold hover:bg-[#00FFFF]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]">History</a>
+			<a data-link id="global-btn-search" class="bg-transparent border-2 border-[#FFD700] px-10 py-3 rounded-xl text-[#FFD700] font-bold hover:bg-[#FFD700]/20 transition duration-200 shadow-[0_0_10px_#FFD700]" data-i18n="overall">Overall</a>
+			<a data-link id="history-btn-search" class="bg-transparent border-2 border-[#00FFFF] px-10 py-3 rounded-xl text-[#00FFFF] font-bold hover:bg-[#00FFFF]/20 transition duration-200 shadow-[0_0_10px_#00FFFF]" data-i18n="history_trad">History</a>
 		</div>
 
 		<div class="flex-1 relative flex items-center justify-center">
