--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -3,11 +3,11 @@
 		<!-- Centre buttons container -->
 		<div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
 			<a id="stats-btn" href="/profile/statistics" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Stats">
 				Statistics
 			</a>
 			<a id="edit-btn" href="/profile/edit" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/30 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/30 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Edit_trad">
 				Edit profile
 			</a>
 		</div>
@@ -15,7 +15,7 @@
 		<div class="ml-auto">
 			<a href="/home" data-link 
 				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+				<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
 			</a>
 		</div>
 	</div>
@@ -37,7 +37,7 @@
 			<!-- Right part (form) -->
 			<div class="md:w-2/3 mt-20 space-y-5">
 				<div id="edit-current-password-div" class="flex flex-col">
-					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">current password</label>
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]" data-i18n="current_pass">current password</label>
 					<div class="relative w-full md:w-2/3">
 						<input id="edit-currentpassword-input" required type="password" placeholder="********" 
 							class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
@@ -48,7 +48,7 @@
 				</div>
 
 				<div id="edit-new-password-div" class="flex flex-col">
-					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">new password</label>
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]" data-i18n="new_password">new password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
 							<input id="edit-newpassword-input" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
@@ -61,11 +61,11 @@
 						<img id="profile-badPasswordIcon" src="/images/bad.png" class="hidden ml-2 w-6 h-6 shrink-0" />
 						<img id="profile-goodPasswordIcon" src="/images/good.png" class="hidden ml-2 w-6 h-6 shrink-0" />
 					</div>
-					<span id="edit-password-error" class="text-red-500 text-sm hidden">Password must be at least 6 characters long and include uppercase, lowercase and numbers</span>
+					<span id="edit-password-error" class="text-red-500 text-sm hidden" data-i18n="password_error">Password must be at least 6 characters long and include uppercase, lowercase and numbers</span>
 				</div>
 
 				<div id="edit-confirm-new-password-div" class="flex flex-col">
-					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]">confirm password</label>
+					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]" data-i18n="confirm_password_label">confirm password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
 							<input id="edit-confirmpassword-input" required type="password" placeholder="********"
@@ -82,11 +82,11 @@
 				<!-- Buttons -->
 				<div class="flex justify-start gap-6 pt-8">
 					<a href="/profile/edit" type="button" id="unsave-btn-edit-password" 
-						class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]">
+						class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]" data-i18n="save">
 						Unsave
 					</a>
 					<button type="submit" id="save-btn-edit-password" 
-						class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]">
+						class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]" data-i18n="unsave">
 						Save
 					</button>
 				</div>
