--- a/frontend/src/pages/history_statistics.html
+++ b/frontend/src/pages/history_statistics.html
@@ -3,11 +3,11 @@
 		<!-- Centre buttons container -->
 		<div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
 			<a id="stats-btn" href="/profile/statistics" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Stats">
 				Statistics
 			</a>
 			<a id="edit-btn" href="/profile/edit" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Edit_trad">
 				Edit profile
 			</a>
 		</div>
@@ -15,7 +15,7 @@
 		<div class="ml-auto">
 			<a href="/home" data-link 
 				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+				<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
 			</a>
 		</div>
 	</div>
@@ -25,15 +25,15 @@
 
 		<div class="flex justify-center gap-4 mb-4 relative z-10">
 			<a id="History-btn" href="/profile/statistics/history" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="history_trad">
 				History
 			</a>
 			<a id="Global-btn" href="/profile/statistics" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="overall">
 				Overall
 			</a>
 			<a id="Tournament-btn" href="/profile/statistics/tournaments" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="tournament_trad">
 				Tournament
 			</a>
 		</div>
