--- a/frontend/src/pages/tournament_statistics.html
+++ b/frontend/src/pages/tournament_statistics.html
@@ -3,11 +3,11 @@
 		<!-- Centre buttons container -->
 		<div class="absolute left-1/2 -translate-x-1/2 flex justify-center gap-4">
 			<a id="stats-btn" href="/profile/statistics" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Stats">
 				Statistics
 			</a>
 			<a id="edit-btn" href="/profile/edit" data-link 
-				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-3 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="Edit_trad">
 				Edit profile
 			</a>
 		</div>
@@ -15,7 +15,7 @@
 		<div class="ml-auto">
 			<a href="/home" data-link 
 				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-				<span class="text-[#FFD700] font-bold text-lg">HOME</span>
+				<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
 			</a>
 		</div>
 	</div>
@@ -25,15 +25,15 @@
 
 		<div class="flex justify-center gap-4 mb-4 relative z-10">
 			<a id="History-btn" href="/profile/statistics/history" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="history">
 				History
 			</a>
 			<a id="Global-btn" href="/profile/statistics" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="overall">
 				Overall
 			</a>
 			<a id="Tournament-btn" href="/profile/statistics/tournaments" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-[#00FFFF]/20 border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="tournament">
 				Tournament
 			</a>
 		</div>
@@ -43,12 +43,12 @@
 				<!-- Statistiques principales -->
 				<div class="flex w-full space-x-24 items-start">
 					<div class="flex flex-col items-center justify-center mx-10 bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold">TOURNAMENTS PLAYED</div>
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="tournament_played" >TOURNAMENTS PLAYED</div>
 						<div id="tournaments_played" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 			
 					<div class="flex flex-col items-center justify-center bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold">BEST RANKING</div>
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="best_rank" >BEST RANKING</div>
 						<div id="best_ranking" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 			
@@ -56,11 +56,11 @@
 						<div class="flex flex-col space-y-4">
 							<div class="flex items-center space-x-2">
 								<div class="w-4 h-4 bg-[#00FF00] rounded-sm shadow-[0_0_10px_#00FF00]"></div>
-								<span class="text-[#00FF00] text-2xl">Tournament Won</span>
+								<span class="text-[#00FF00] text-2xl" data-i18n="tournament_w">Tournament Won</span>
 							</div>
 							<div class="flex items-center space-x-2">
 								<div class="w-4 h-4 bg-[#FF007A] rounded-sm shadow-[0_0_10px_#FF007A]"></div>
-								<span class="text-[#FF007A] text-2xl">Tournament Lost</span>
+								<span class="text-[#FF007A] text-2xl" data-i18n="tournament_l">Tournament Lost</span>
 							</div>
 						</div>
 						<canvas id="graph-win-lose" class="w-48 h-48 rounded-full"></canvas>
