--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -82,11 +82,11 @@
 				<!-- Buttons -->
 				<div class="flex justify-start gap-6 pt-8">
 					<a href="/profile/edit" type="button" id="unsave-btn-edit-password" 
-						class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]" data-i18n="save">
+						class="px-6 py-3 bg-transparent border-2 border-[#FF0F4D] text-[#FF0F4D] rounded-xl hover:bg-[#FF0F4D]/20 transition shadow-[0_0_10px_#FF0F4D]" data-i18n="unsave">
 						Unsave
 					</a>
 					<button type="submit" id="save-btn-edit-password" 
-						class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]" data-i18n="unsave">
+						class="px-6 py-3 bg-transparent border-2 border-[#00FF00] text-[#00FF00] rounded-xl hover:bg-[#00FF00]/20 transition shadow-[0_0_10px_#00FF00]" data-i18n="save">
 						Save
 					</button>
 				</div>
