--- a/frontend/src/pages/edit_info.html
+++ b/frontend/src/pages/edit_info.html
@@ -57,7 +57,7 @@
 				<div id="edit-email-div" class="flex flex-col">
 					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]" data-i18n="mail_trad" >EDIT EMAIL</label>
 					<input id="edit-email-input" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" type="email" title="Enter a valid address" 
-						placeholder="your.email@exemple.com" 
+						data-i18n-placeholder="email_placeholder" placeholder="your.email@exemple.com" 
 						class="w-full md:w-2/3 px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
 					<span id="edit-email-error" class="text-red-500 text-sm hidden" data-i18n="email_error" >The email address entered is not valid. Please ensure it follows a standard format (user@domain.com).</span>
 				</div>
