--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -11,7 +11,7 @@
 <div class="flex-1 flex flex-col">
 	<div class="flex items-center justify-between p-5">
 		<div class="flex-1 flex justify-center">
-			<input id="search-bar" type="search" placeholder="Search users... " class="font-mono border-2 ml-40 text-[#FF2E9F] rounded-2xl border-spacing-4 p-3 w-[500px] border-[#FF2E9F] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#FF2E9F] placeholder-[#FF2E9F]/50 focus:outline-none focus:border-[#B026FF]" />
+			<input id="search-bar" type="search" data-i18n-placeholder="search_users" placeholder="Search users... " class="font-mono border-2 ml-40 text-[#FF2E9F] rounded-2xl border-spacing-4 p-3 w-[500px] border-[#FF2E9F] bg-black/30 backdrop-blur-lg shadow-[0_0_10px_#FF2E9F] placeholder-[#FF2E9F]/50 focus:outline-none focus:border-[#B026FF]" />
 		</div>
 		<div id="topbar-buttons" class="flex items-center gap-6">
 			<a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
