ajout drapeau page profil et profil des gens

--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -12,12 +12,32 @@
 			</a>
 		</div>
 		<!-- Home button -->
-		<div class="ml-auto">
-			<a href="/home" data-link 
-				class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
-				<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
-			</a>
+		<div class="ml-auto flex items-center gap-4">
+		<div class="relative">
+			<button id="language-selector" class="group w-10 h-10 rounded-lg border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF] overflow-hidden flex items-center justify-center hover:border-[#FF2E9F] transition-colors duration-200">
+				<img id="current-flag" src="/images/en.png" alt="English" class="w-full h-full object-cover">
+			</button>
+			<div id="language-dropdown" class="hidden absolute top-full right-[50%] translate-x-[50%] mt-2 bg-black/90 border-2 border-[#B026FF] rounded-lg shadow-[0_0_10px_#B026FF] overflow-hidden z-[100] min-w-[150px]">
+				<button class="language-option w-full flex items-center gap-2 px-4 py-2 hover:bg-[#B026FF]/20 transition-colors duration-200" data-lang="en">
+					<img src="/images/en.png" alt="English" class="w-6 h-6 object-cover rounded">
+					<span class="text-[#00FFFF] text-sm whitespace-nowrap" data-i18n="english">English</span>
+				</button>
+				<button class="language-option w-full flex items-center gap-2 px-4 py-2 hover:bg-[#B026FF]/20 transition-colors duration-200" data-lang="fr">
+					<img src="/images/fr.png" alt="French" class="w-6 h-6 object-cover rounded">
+					<span class="text-[#00FFFF] text-sm whitespace-nowrap" data-i18n="french">French</span>
+				</button>
+				<button class="language-option w-full flex items-center gap-2 px-4 py-2 hover:bg-[#B026FF]/20 transition-colors duration-200" data-lang="es">
+					<img src="/images/es.png" alt="Spanish" class="w-6 h-6 object-cover rounded">
+					<span class="text-[#00FFFF] text-sm whitespace-nowrap" data-i18n="spanish">Spanish</span>
+				</button>
+			</div>
 		</div>
+
+		<a href="/home" data-link 
+			class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+			<span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
+		</a>
+	</div>
 	</div>
 
 	<form id="edit-password-form" 
