problem fixed in history

--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -57,15 +57,15 @@
         <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="games_stats">Games Statistics</h3>
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-                <p class="text-[#00FFFF] text-sm mb-2">Total Games</p>
+                <p class="text-[#00FFFF] text-sm mb-2" data-i18n="total_games_trad" >Total Games</p>
                 <p id="total_games" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
-                <p class="text-[#00FF00] text-sm mb-2">Victories</p>
+                <p class="text-[#00FF00] text-sm mb-2" data-i18n="Victories_trad" >Victories</p>
                 <p id="wins_game" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
-                <p class="text-[#FF2E9F] text-sm mb-2">Defeats</p>
+                <p class="text-[#FF2E9F] text-sm mb-2" data-i18n="Defeats_trad" >Defeats</p>
                 <p id="lost_game" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
@@ -76,15 +76,15 @@
         <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="tournament_stats">Tournament Statistics</h3>
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-                <p class="text-[#00FFFF] text-sm mb-2">Tournaments Played</p>
+                <p class="text-[#00FFFF] text-sm mb-2" data-i18n="t_pl">Tournaments Played</p>
                 <p id="tournament_played" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
-                <p class="text-[#00FF00] text-sm mb-2">Tournaments Won</p>
+                <p class="text-[#00FF00] text-sm mb-2" data-i18n="t_w">Tournaments Won</p>
                 <p id="tournament_won" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
-                <p class="text-[#FF2E9F] text-sm mb-2">Tournaments Lost</p>
+                <p class="text-[#FF2E9F] text-sm mb-2" data-i18n="t_l" >Tournaments Lost</p>
                 <p id="tournament_lost" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
@@ -95,11 +95,11 @@
         <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="points_stats">Points Statistics</h3>
         <div class="grid grid-cols-2 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
-                <p class="text-[#B026FF] text-sm mb-2">Total Points</p>
+                <p class="text-[#B026FF] text-sm mb-2" data-i18n="total_trad">Total Points</p>
                 <p id="total_points" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
-                <p class="text-[#B026FF] text-sm mb-2">Points per Game</p>
+                <p class="text-[#B026FF] text-sm mb-2" data-i18n="points_t">Points per Game</p>
                 <p id="average_points" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
