trad in profile searcge

--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -73,7 +73,7 @@
 
     <!-- Tournament Statistics -->
     <div class="mb-8">
-        <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="tournament_stats">Tournament Statistics</h3>
+        <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="tournaments_stats">Tournament Statistics</h3>
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
                 <p class="text-[#00FFFF] text-sm mb-2" data-i18n="t_pl">Tournaments Played</p>
