litle modif regex email

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -43,7 +43,7 @@
 			<label for="sign-up-email" class="block font-semibold mb-1 text-white" data-i18n="email_label">Email
 				<span class="text-red-500">*</span>
 			</label>
-			<input id="sign-up-email" data-i18n-placeholder="email_placeholder" placeholder="your.email@exemple.com" pattern="[^\s@]+@[^\s@]+\.[^\s@]+" name="email" type="email" required class="w-full p-2 rounded-lg border text-white bg-black/30 border-[#00FFFF]/30 focus:outline-none focus:border-[#00FFFF]"/>
+			<input id="sign-up-email" data-i18n-placeholder="email_placeholder" placeholder="your.email@exemple.com" name="email" type="email" required class="w-full p-2 rounded-lg border text-white bg-black/30 border-[#00FFFF]/30 focus:outline-none focus:border-[#00FFFF]"/>
 			<span id="email-error" class="text-red-500 text-sm hidden" data-i18n="email_error">The email address entered is not valid. Please ensure it follows a standard format (user@domain.com).</span>
 		</div>
 		
