message d\'erreur quand l\'email est pas bon type Pseudo_42@Pseudo_42.Pseudo_42 pas bon car _ dans le nom de domaine et a la fin

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -36,7 +36,7 @@
 				required 
 				class="w-full p-2 rounded-lg border-2 bg-black/30 border-[#00FFFF]/30 text-white focus:outline-none focus:border-[#00FFFF]"
 			/>
-			<span id="username-error" class="text-red-500 text-sm hidden" data-i18n="username_error">Username must be 3-14 characters long and contain only letters, numbers, underscore or hyphen</span>
+			<span id="username-error" class="text-red-500 text-sm hidden" data-i18n="username_error">Username must be 3-14 characters long and contain only letters, numbers, underscore</span>
 		</div>
 
 		<div>
