politiques de mot passe qui accepte les caracteres speciaux

--- a/frontend/src/pages/register.html
+++ b/frontend/src/pages/register.html
@@ -58,7 +58,7 @@
 						name="password" 
 						minlength="6" 
 						placeholder="********" 
-						pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
+						pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d\W_]{6,}" 
 						type="password" 
 						required 
 						class="w-full p-2 pr-12 rounded-lg text-white border-2 bg-black/30 border-[#00FFFF]/30 focus:outline-none focus:border-[#00FFFF]"
