--- a/frontend/src/pages/edit_password.html
+++ b/frontend/src/pages/edit_password.html
@@ -70,7 +70,7 @@
 					<label class="block text-sm font-bold mb-1 text-[#FF2E9F]" data-i18n="new_password">new password</label>
 					<div class="flex items-center md:w-2/3">
 						<div class="relative w-full">
-							<input id="edit-newpassword-input" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d]{6,}" 
+							<input id="edit-newpassword-input" required type="password" pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[A-Za-z\d\W_]{6,}" 
 								placeholder="********" 
 								class="w-full px-4 py-3 rounded-xl border-2 bg-black/30 border-[#00FFFF] text-[#00FFFF] placeholder-[#00FFFF]/50 focus:outline-none focus:border-[#ad39f0] transition"/>
 							<button type="button" id="edit-newpassword-btn" class="absolute inset-y-0 right-0 flex items-center pr-3">
